--- a/style.css
+++ b/style.css
@@ -539,7 +539,7 @@ span {
   padding: 2.5rem;
   font-size: 1.8rem;
   color: var(--text-color);
-  background: var(--second-bg-color);
+  background: var(--bg-color);
   border-radius: 2rem;
   border: 2px solid var(--main-color);
   margin: 1.5rem 0;
@@ -555,7 +555,7 @@ span {
   bottom: 0;
   width: 100%;
   padding: 40px 0;
-  background-color: var(--bg-color);
+  background-color: var(--second-bg-color);
 }
 
 .footer .social {
